--- a/pages/auth/login.css
+++ b/pages/auth/login.css
@@ -12,9 +12,9 @@ body {
   padding-bottom: 40px;
   background-color:white;
 }
-.container{
+/*.container{
   background-color: whitesmoke;
-}
+}*/
 .form-signin {
   width: 100%;
   max-width: 530px;
