--- a/pages/auth/login.css
+++ b/pages/auth/login.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   
   padding-bottom: 40px;
-  background-color:white;
+  background-color:#F0F2F5;
 }
 /*.container{
   background-color: whitesmoke;
@@ -19,11 +19,12 @@ body {
   width: 100%;
   max-width: 530px;
   padding: 15px;
-  
+  height:100%;
   margin: auto;
   background: #fff;
   border-radius: 10px;
-  margin-top: 5%;
+  margin-top: 12%;
+  /* margin-bottom: 13%; */
   -webkit-box-shadow: 0 10px 34px -15px rgb(0 0 0 / 24%);
   -moz-box-shadow: 0 10px 34px -15px rgba(0,0,0,.24);
   box-shadow: 0 10px 34px -15px rgb(0 0 0 / 24%);
