--- a/pages/custom.css
+++ b/pages/custom.css
@@ -25,11 +25,11 @@
   margin-bottom: 0%;
 }
 .ant-layout-header {
-  background: #163f66;
+  background: #ff3155;
   height: 65px;
 }
 .ant-menu {
-  background: #163f66;
+  background: #ff3155;
   color: white;
 }
 .ant-menu-horizontal > .ant-menu-item a {
@@ -46,19 +46,22 @@
   margin: 11px 0;
 }
 .job_post {
-  border: 1px solid #70bdf2;
+  border: 1px solid #7171714d;
   border-radius: 10px;
   padding: 1rem;
   margin-bottom: 1rem;
 }
 .job_post:hover {
-  background-color: #edf4fe;
+  box-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
 }
 .job_title {
   cursor: pointer;
+  color: #000;
+  font-size: 24px;
+  margin-bottom: 0;
 }
 .job_title:hover {
-  color: #0e8044;
+  color: #ff3155;
   text-decoration: underline;
 }
 .ant-select:not(.ant-select-customize-input) .ant-select-selector {
@@ -110,11 +113,11 @@
 .profile_image {
   border-radius: 50%;
 }
-.view_profile_content{
+.view_profile_content {
   margin-left: 100px;
   margin-right: 100px;
 }
-.site-layout-content{
+.site-layout-content {
   min-height: 280px;
   padding: 24px;
   background: #fff;
@@ -124,4 +127,8 @@
 }
 .ant-row {
   padding-bottom: 15px;
+}
+.ant-btn {
+  background-color: #773EA9;
+  border: #773EA9;
 }
