--- a/pages/custom.css
+++ b/pages/custom.css
@@ -66,7 +66,12 @@
 }
 .ant-select:not(.ant-select-customize-input) .ant-select-selector {
   border: 0px solid #70bdf2;
-  border-bottom: 1px solid #70bdf2;
+  border-bottom: 1px solid #ff3155;
+}
+.ant-select:not(.ant-select-customize-input) .ant-select-selector:hover {
+  border: 0px solid #70bdf2;
+  border-bottom: 1px solid #ff3155;
+  border-right: 1px solid #ff3155;
 }
 .ant-steps {
   width: 100%;
@@ -79,7 +84,7 @@
   margin-bottom: 2rem;
   width: 100%;
   border: 0px solid;
-  border-bottom: 1px solid #70bdf2;
+  border-bottom: 1px solid #FF3155;
   border-radius: 0px;
 }
 .form-label {
@@ -129,6 +134,13 @@
   padding-bottom: 15px;
 }
 .ant-btn {
-  background-color: #773EA9;
-  border: #773EA9;
+  background-color: #773ea9;
+  border: #773ea9;
+}
+
+.ant-select_focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input).ant-select-selector {
+  border-color: #ff3155;
+  border-right-width: 1px !important;
+  outline: 0;
+  box-shadow: 0 0 0 2px rgb(24 144 255 20%);
 }
