--- a/pages/custom.css
+++ b/pages/custom.css
@@ -84,7 +84,7 @@
   margin-bottom: 2rem;
   width: 100%;
   border: 0px solid;
-  border-bottom: 1px solid #FF3155;
+  border-bottom: 1px solid #ff3155;
   border-radius: 0px;
 }
 .form-label {
