--- a/pages/custom.css
+++ b/pages/custom.css
@@ -144,3 +144,8 @@
   outline: 0;
   box-shadow: 0 0 0 2px rgb(24 144 255 20%);
 }
+.ant-menu-horizontal {
+
+  border-bottom: 0px solid #f0f0f0;
+  box-shadow: none;
+}
