--- a/pages/custom.css
+++ b/pages/custom.css
@@ -25,11 +25,11 @@
   margin-bottom: 0%;
 }
 .ant-layout-header {
-  background: #ff3155;
+  background: #a93ea6;
   height: 65px;
 }
 .ant-menu {
-  background: #ff3155;
+  background: #a93ea6;
   color: white;
 }
 .ant-menu-horizontal > .ant-menu-item a {
@@ -145,17 +145,74 @@
   box-shadow: 0 0 0 2px rgb(24 144 255 20%);
 }
 .ant-menu-horizontal {
-
   border-bottom: 0px solid #f0f0f0;
   box-shadow: none;
 }
 
-.quick_link{
-  margin-bottom:15px ;
+.quick_link {
+  margin-bottom: 15px;
 }
-.quick_link a{
-  color:white;
+.quick_link a {
+  color: white;
 }
-.quick_link a:hover{
-  text-decoration:underline;
+.quick_link a:hover {
+  text-decoration: underline;
+}
+.home_category a {
+  color: #757575;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.home_category a {
+  color: #757575;
+}
+.jobpost_btn {
+  background-color: #ffc800;
+  color: #1e1e1e;
+  margin-left: 290px;
+}
+.jobpost_btn:hover {
+  background-color: #ffc800;
+  color: #ffffff;
+  margin-left: 290px;
+  
+}
+/* (A) FIXED WRAPPER */
+.hwrap {
+  overflow: hidden; /* HIDE SCROLL BAR */
+  background: #eee;
+}
+ 
+/* (B) MOVING TICKER WRAPPER */
+.hmove { display: flex; }
+
+/* (C) ITEMS - INTO A LONG HORIZONTAL ROW */
+.hitem {
+  flex-shrink: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  text-align: center;
+}
+ 
+/* (D) ANIMATION - MOVE ITEMS FROM RIGHT TO LEFT */
+/* 4 ITEMS -400%, CHANGE THIS IF YOU ADD/REMOVE ITEMS */
+@keyframes tickerh {
+  0% { transform: translate3d(100%, 0, 0); }
+  100% { transform: translate3d(-400%, 0, 0); }
+}
+.hmove { animation: tickerh linear 55s infinite; }
+.hmove:hover { animation-play-state: paused; }
+
+.ant-radio-button-wrapper:first-child:last-child {
+
+  margin-top: 113px;
+  margin-left: 865px;
+  font-size: 29px;
+  height: 50px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 7px;
+  width: 169px;
+
 }
