--- a/pages/custom.css
+++ b/pages/custom.css
@@ -241,3 +241,7 @@
   padding: 12px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+footer{
+  padding: 40px 0px;
+  
+}
