--- a/pages/custom.css
+++ b/pages/custom.css
@@ -85,7 +85,7 @@
   margin-bottom: 2rem;
   width: 100%;
   border: 0px solid;
-  border-bottom: 1px solid #ff3155;
+  border-bottom: 1px solid #773ea9;
   border-radius: 0px;
 }
 .form-label {
