--- a/pages/responsive.css
+++ b/pages/responsive.css
@@ -1,6 +1,71 @@
-@media only screen and (max-width: 900px) {
-   
-    .site-layout{
-        margin: 16px 30px !important;
-    }
+@media only screen and (min-width: 900px) {
+  .stepJobPostMobile {
+    display: none;
   }
+  .site-layout-home {
+    padding: 0 20px;
+
+    margin: 0px 36px;
+  }
+  .site-layout-home .site-layout-background {
+    background: #fff;
+  }
+  .jobpost_btn_mobile {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  /* .site-layout {
+    margin: 16px 30px !important;
+  } */
+  .jobpost_btn_mobile {
+    background-color: #ffc800;
+    color: #1e1e1e;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 1px solid #ffffff;
+    font-weight: bold;
+    
+  }
+  .jobpost_btn_mobile:hover {
+    background-color: darkblue;
+    color: #ffffff;
+    margin-left: 270px;
+    border: 1px solid #ffffff;
+  }
+  .site-layout-home {
+    padding: 0 20px;
+
+    margin: 0px 0px;
+  }
+  .site-layout-home .site-layout-background {
+    background: #fff;
+  }
+  .site-layout {
+    padding: 0 20px;
+
+    margin: 60px 0px;
+  }
+  .ant-radio-button-wrapper:first-child:last-child {
+    margin-top: 207px;
+    margin-left: 116px;
+    font-size: 22px;
+    height: 50px;
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 7px;
+    width: 195px;
+  }
+  .search_bar {
+    padding: 50px !important;
+  }
+  .data_section {
+    margin: 20px;
+  }
+  .stepJobPostPc {
+    display: none;
+  }
+  .jobpost_btn {
+    display: none;
+  }
+}
