--- a/pages/responsive.css
+++ b/pages/responsive.css
@@ -1,8 +1,7 @@
 @media only screen and (min-width: 900px) {
-  .applied_person{
+  .applied_person {
     font-weight: bold;
-    display:flex;
-   
+    display: flex;
   }
   .stepJobPostMobile {
     display: none;
@@ -27,9 +26,15 @@
   /* .site-layout {
     margin: 16px 30px !important;
   } */
-  .applied_person{
+  .notificationIcon{
+    padding-left: 20px;
+  }
+  .ant-menu-submenu-popup > .ant-menu {
+    background-color: #95D5D2;
+  }
+  .applied_person {
     font-weight: bold;
-    display:grid !important;
+    display: grid !important;
   }
   .form-signin {
     margin-top: 25%;
