--- a/pages/custom.css
+++ b/pages/custom.css
@@ -228,7 +228,7 @@
   margin-left: 865px;
   font-size: 29px;
   height: 50px;
-  border-radius: 5px;
+  border-radius: 1px;
   text-align: center;
   padding-top: 7px;
   width: 169px;
@@ -332,4 +332,7 @@ footer {
   float: left;
   margin-right: 5px;
   background-color: #95d5d2;
+}
+.ant-radio-button-wrapper a:hover {
+  color: white;
 }
