--- a/pages/auth/login.css
+++ b/pages/auth/login.css
@@ -1,16 +1,13 @@
 html,
 body {
-  
   height: 100%;
-  
 }
 
 body {
-  
   align-items: center;
-  
+
   padding-bottom: 40px;
-  background-color:#F0F2F5;
+  background-color: #f0f2f5;
 }
 /*.container{
   background-color: whitesmoke;
@@ -19,14 +16,14 @@ body {
   width: 100%;
   max-width: 530px;
   padding: 15px;
-  height:100%;
+  height: 100%;
   margin: auto;
   background: #fff;
   border-radius: 10px;
   margin-top: 9%;
   /* margin-bottom: 13%; */
   -webkit-box-shadow: 0 10px 34px -15px rgb(0 0 0 / 24%);
-  -moz-box-shadow: 0 10px 34px -15px rgba(0,0,0,.24);
+  -moz-box-shadow: 0 10px 34px -15px rgba(0, 0, 0, 0.24);
   box-shadow: 0 10px 34px -15px rgb(0 0 0 / 24%);
 }
 .form-signin .checkbox {
@@ -59,7 +56,28 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color:black;
-  color: white;
+  background-color: white;
   text-align: center;
+}
+
+.footer-list .footer-list-item a {
+  color: #656565;
+}
+.footer-list .footer-list-item a:hover {
+  text-decoration: underline;
+}
+.footer_social_icon {
+  float: left;
+  margin-left: 5px;
+  margin-bottom: 4px;
+  margin-top: -24px;
+}
+.footer_social_icon a {
+  font-size: xx-large;
+  padding: 4px;
+
+  color: #b6b5b5;
+}
+.footer_social_icon a:hover {
+  color: #656565;
 }
