--- a/pages/custom.css
+++ b/pages/custom.css
@@ -171,9 +171,12 @@
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.home_category a {
-  color: #757575;
+.home_category a:hover {
+  color: darkblue;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
+
 .jobpost_btn {
   background-color: #ffc800;
   color: #1e1e1e;
