--- a/pages/responsive.css
+++ b/pages/responsive.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 900px) {
+  .footer_title{
+    border-bottom: "4px solid #ffc800";
+    margin: "0px 610px"; 
+  }
   .search_form{
     display: flex;
     width: 55% ;
