--- a/pages/custom.css
+++ b/pages/custom.css
@@ -356,3 +356,14 @@ footer {
 .jobpost_list:hover{
    border-bottom: 2px solid transparent !important;
 }
+.details_btn a{
+  font: bold 15px  ;
+  text-decoration: none ;
+  background-color: darkblue;
+  color: white;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
