upload applied fix

--- a/pages/custom.css
+++ b/pages/custom.css
@@ -367,3 +367,7 @@ footer {
   border-bottom: 1px solid #333333;
   border-left: 1px solid #CCCCCC;
 }
+.ant-spin-container {
+
+  margin-top: -8px;
+}
