upload phone no

--- a/pages/custom.css
+++ b/pages/custom.css
@@ -263,9 +263,6 @@
 .notifi_bar a {
   color: black;
 }
-.notifi_bar a:hover {
-  color: white;
-}
 
 .notifi_bar {
   border-bottom: 1px solid rgb(236, 235, 235);
@@ -273,8 +270,8 @@
   margin-bottom: 2px;
 }
 .notifi_bar:hover {
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-  background-color: darkblue;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* background-color: darkblue; */
   border-radius: 3px;
 }
 .social_media_btn {
