--- a/pages/custom.css
+++ b/pages/custom.css
@@ -132,9 +132,7 @@
 .ant-space {
   display: -webkit-box !important;
 }
-.ant-row {
-  padding-bottom: 15px;
-}
+
 .ant-btn {
   /* background-color: #389e0d; */
   background-color: darkblue;
@@ -183,6 +181,7 @@
   color: #1e1e1e;
   margin-left: auto;
   border: 1px solid #ffffff;
+  font-weight: 700;
 }
 .jobpost_btn:hover {
   background-color: darkblue;
@@ -241,7 +240,7 @@
   border-radius: 1px;
   text-align: center;
   padding-top: 7px;
-  width: 169px;
+  /* width: 169px; */
 }
 .ant-radio-button-wrapper:first-child:last-child:hover {
   background-color: darkblue;
@@ -367,4 +366,14 @@ footer {
 .ant-spin-container {
 
   margin-top: -8px;
+}
+.site-form-in-drawer-wrapper {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  padding: 10px 16px;
+  text-align: right;
+  background: #fff;
+  border-top: 1px solid #e9e9e9;
 }
