--- a/pages/custom.css
+++ b/pages/custom.css
@@ -137,7 +137,7 @@
   /* background-color: #389e0d; */
   background-color: darkblue;
   border: #ffc800;
-  color: white ;
+  color: white;
 }
 .ant-btn:hover {
   background-color: darkblue;
@@ -189,10 +189,10 @@
   margin-left: auto;
   border: 1px solid #ffffff;
 }
-.ant-menu-item .jobpost_btn  a{
+.ant-menu-item .jobpost_btn a {
   color: #1e1e1e !important;
 }
-.ant-menu-item .jobpost_btn  a:hover{
+.ant-menu-item .jobpost_btn a:hover {
   color: #ffffff !important;
 }
 /* (A) FIXED WRAPPER */
@@ -345,26 +345,24 @@ footer {
 
 .ant-layout-sider-trigger {
   position: absolute;
-  z-index: 0!important;
-
+  z-index: 0 !important;
 }
 
-.jobpost_list:hover{
-   border-bottom: 2px solid transparent !important;
+.jobpost_list:hover {
+  border-bottom: 2px solid transparent !important;
 }
-.details_btn a{
-  font: bold 15px  ;
-  text-decoration: none ;
+.details_btn a {
+  font: bold 15px;
+  text-decoration: none;
   background-color: darkblue;
   color: white;
   padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
+  border-top: 1px solid #cccccc;
   border-right: 1px solid #333333;
   border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
+  border-left: 1px solid #cccccc;
 }
 .ant-spin-container {
-
   margin-top: -8px;
 }
 .site-form-in-drawer-wrapper {
@@ -378,7 +376,5 @@ footer {
   border-top: 1px solid #e9e9e9;
 }
 .ant-avatar-string {
-
   left: 65%;
-
 }
