--- a/pages/custom.css
+++ b/pages/custom.css
@@ -27,7 +27,7 @@
 }
 .ant-layout-header {
   background: #95d5d2;
-  height: 65px;
+  height: 70px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .ant-menu {
@@ -375,6 +375,12 @@ footer {
   background: #fff;
   border-top: 1px solid #e9e9e9;
 }
-.ant-avatar-string {
+/* .ant-avatar-string {
   left: 65%;
+} */
+
+
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
+
+  padding: 0 12px;
 }
