--- a/pages/custom.css
+++ b/pages/custom.css
@@ -380,7 +380,7 @@ footer {
 } */
 
 
-/* .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
 
   padding: 0 12px;
-} */
+}
