menu fix mobile

--- a/pages/responsive.css
+++ b/pages/responsive.css
@@ -47,6 +47,12 @@
   /* .site-layout {
     margin: 16px 30px !important;
   } */
+  .section_menu_mobile .ant-drawer-body{
+
+    padding: 0px !important;
+  
+
+  }
   .menu_pc{
     display: none;
   }
