--- a/pages/custom.css
+++ b/pages/custom.css
@@ -28,15 +28,15 @@
 .ant-layout-header {
   background: #95d5d2;
   height: 70px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19); */
+
 }
 .ant-menu {
   background: #95d5d2;
   color: white;
 }
-.ant-menu-horizontal > .ant-menu-item a {
-  color: white;
-}
+
 .filtter-items {
   width: 100%;
 }
@@ -316,15 +316,18 @@ footer {
   border-color: #000000;
 }
 .location_btn {
-  background-color: rgb(149, 213, 210);
-  border: 1px solid black;
-  margin: 3px;
+  /* background-color: rgb(149, 213, 210); */
+  /* border: 1px solid black; */
+  margin: 1px;
+  padding: 5px;
   color: black;
+  font-weight: 500;
 }
+
 .location_btn:hover {
-  background-color: darkblue;
-  border: 1px solid #ffffff;
-  margin: 3px;
+  /* background-color: darkblue;
+  border: 1px solid #ffffff; */
+  margin: 1px;
   color: #ffffff;
 }
 .data_section {
@@ -375,12 +378,21 @@ footer {
   background: #fff;
   border-top: 1px solid #e9e9e9;
 }
+
+
+/* navbar color */
+.ant-menu-submenu-title{
+  color: black;
+}
+.ant-menu-horizontal > .ant-menu-item a {
+  color: black;
+}
 /* .ant-avatar-string {
   left: 65%;
 } */
 
 
-.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
+/* .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
 
   padding: 0 12px;
-}
+} */
